# esp32-usb-v2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: Doxyfile  build_latest.sh  conf_common.py  upload_docs.sh
docs/en/: conf.py  index.rst
docs/en/device/: index.rst
docs/en/device/classes/: cdc.rst  dfu.rst  flashdisk.rst  hid.rst  index.rst  msc.rst  ramdisk.rst  sdcard.rst  webusb.rst
docs/en/host/: index.rst
examples/arduino/cdc/: cdc.ino
examples/arduino/hid/: mouse.ino
examples/arduino/hid/composite/: composite.ino
examples/arduino/hid/keyboard/: keyboard.ino
examples/arduino/hid/mouse/: mouse.ino
examples/arduino/msc/flashdisk/: flashdisk.ino  partitions.csv
examples/arduino/msc/ramdisk/: ramdisk.ino
examples/arduino/web/: web.ino
examples/esp-idf/: README.md
examples/esp-idf/hello-world-msc-fat/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
src/: descriptor.hpp  endpoint.hpp  flashdisk.hpp  interface.hpp  ramdisk.hpp  sdcard.hpp  usb_cdc.hpp  usb_device.hpp  usb_dfu.hpp  usb_hid.hpp  usb_keyboard.hpp  usb_mouse.hpp  usb_msc.hpp  usb_webusb.hpp
src/cdc/: usb_cdc.cpp
src/common/: usb_descriptor.cpp  usb_device.cpp  usb_interface.cpp
src/dfu/: dfu.cpp
src/hid/: hid.cpp  keyboard.cpp  mouse.cpp
src/include/: endpoint.hpp  flashdisk.hpp  interface.hpp  ramdisk.hpp  usb_cdc.hpp  usb_device.hpp  usb_hid.hpp
src/msc/: sdcard.cpp  usb_flash.cpp  usb_msc.cpp  usb_ramdisk.cpp  usb_sdcard.cpp
src/private/: descriptor.hpp  endpoint.hpp  usb_device.hpp
src/web/: webserial.cpp
(+3 files in other folders)
